clusters/homelab/apps/json-resume/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: json-resume
  labels:
    name: json-resume
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
