clusters/homelab/apps/json-resume/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: json-resume
  namespace: json-resume
  labels:
    app: json-resume
spec:
  selector:
    app: json-resume
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
