clusters/homelab/apps/json-resume/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: json-resume
  namespace: json-resume
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/redirect-entry-point: websecure
spec:
  tls:
  - hosts:
    - kragh.dev
    secretName: json-resume-tls
  rules:
  - host: kragh.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: json-resume
            port:
              number: 80
